# syaml

./: .gitignore  Dockerfile  MANIFEST.in  Makefile  README.rst  circle.yaml  circle.yml  example.yml  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
examples/: Makefile  hello_world.syaml
requirements/: develop.txt  install.txt
src/syaml/: __init__.py  interfaces.py  settings.py  syaml.py
src/syaml/commands/: __init__.py  render.py
src/syaml/tests/: syaml_test.yaml  test_ok.py  test_syaml.py
