[metadata]
name = syaml
version = 2.0.0
description = YAML parser that environment variable is expanded
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = YAML
license = AGPL-3.0-or-later
license_filess = file: LICENSE

classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development


author = symdon
author_email = 8707279+TakesxiSximada@users.noreply.github.com

maintainer = symdon
maintainer_email = 8707279+TakesxiSximada@users.noreply.github.com

[options]
python_requires = >=3.6
package_dir =
	    = src
packages = find:
zip_safe = False
include_package_data = True

install_requires =
    PyYAML
    jumon
    mako
    six
    zope.component
    zope.interface

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    syaml = syaml.commands:main

[options.extras_require]
testing =
	pytest 
	tox

packaging =
	  build
	  setuptools
	  twine
	  wheel
